Fix spacing to fluid

--- a/src/app/livemap/livemap.component.css
+++ b/src/app/livemap/livemap.component.css
@@ -2,6 +2,6 @@
   margin-top: 1.5em;
 }
 img {
-  height: 35em;
-  width: 40em;
+  height: 100%;
+  width: 100%;
 }
