--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,7 @@
+.navbar-component {
+  padding-left: 5em;
+  padding-right: 5em;
+}
 .navbar-main {
   color: #000;
   text-decoration: none;
