--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,5 +1,7 @@
-.login-form {
-  margin: 1em;
+.register-component {
+  margin: 1em 1em 0 0;
+  padding-left: 7em;
+  padding-right: 6em;
 }
 
 .form-group {
